    
    - added new methods to TypeDecorator, process_bind_param() and
      process_result_value(), which automatically take advantage of the processing
      of the underlying type.  Ideal for using with Unicode or Pickletype.
      TypeDecorator should now be the primary way to augment the behavior of any
      existing type including other TypeDecorator subclasses such as PickleType.
        
    - tables with schemas can still be used in sqlite, firebird,
      schema name just gets dropped [ticket:890]

    - changed the various "literal" generation functions to use an anonymous
      bind parameter.  not much changes here except their labels now look 
      like ":param_1", ":param_2" instead of ":literal"
      
    - column labels in the form "tablename.columname", i.e. with a dot, are now
      supported.
      
    - from_obj keyword argument to select() can be a scalar or a list.
    
- orm
   - a major behavioral change to collection-based backrefs: they no 
     longer trigger lazy loads !  "reverse" adds and removes 
     are queued up and are merged with the collection when it is 
     actually read from and loaded; but do not trigger a load beforehand.
     For users who have noticed this behavior, this should be much more
     convenient than using dynamic relations in some cases; for those who 
     have not, you might notice your apps using a lot fewer queries than
     before in some situations. [ticket:871]

   - mutable primary key support is added. primary key columns can be
     changed freely, and the identity of the instance will change upon
     flush. In addition, update cascades of foreign key referents (primary
     key or not) along relations are supported, either in tandem with the
     database's ON UPDATE CASCADE (required for DB's like Postgres) or
     issued directly by the ORM in the form of UPDATE statements, by setting
     the flag "passive_cascades=False".
